# expo-de-load-from-api

./: .env  .gitignore  data_combine.py  load_data.py  main.py  pyproject.toml
